# aesthetic-computer

./: .gitattributes  .github  .gitignore  .gitmodules  .helmignore  .last-built-hash  .last-papers-built-hash  .mcp.json  .netlify-clean-build  .node-version  .npmrc  .package.json.swp  .prettierrc  AGENTS.md  AGENTS.md.backup  AUDIO_SYNC_FIX.md  AUDIO_SYNC_LOGGING_SUMMARY.md  CITATION.cff  CLAUDE.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE_TEMP.md  COPILOT.md  DEPENDENCY-UPDATES.md  ENVIRONMENT.md  GRAPHICS.md  GRAVEYARD.txt  HAND.md  INVERT-IMPLEMENTATION.md  KIDLISP-V2-READY.md  KIDLISP_DEBUG_ANALYSIS.md  README.md  README.txt  REBOOT-ELECTRON.md  REPORT-kidlisp-clojure-hosting.md  REPORT-kidlisp-realtime-state.md  SCORE.md  SEASHELLS_README.md  SEASH_LAB_BENCH.md  SEASH_SLIDERS.md  SECURITY-SECRETS.md  (+82 more)
.claude/: settings.json  settings.local.json
.copilot/: .gitignore  README.md
.devcontainer/: .#Dockerfile  .gitignore  Containerfile.apple  DOCKER-IN-DOCKER-FIX.md  Dockerfile  apple-container.fish  build-and-push.sh  config.fish  devcontainer.json  docker-dev-mount  entry.fish  generate-apple-container.fish  nuget.config  setup-python-tools.sh  start-turn.fish  turnserver.conf
.electron-bridge/: command.json  result.json
.emacs-logs/: .gitkeep  emacs-header-template.el
.githooks/: post-commit  pre-commit
.github/: FUNDING.yml  copilot-instructions.md
.vercel/: project.json
aa-memory/: MEMORY.md  feedback_lith_deploy.md
ac-electron/: .env.template  .gitignore  BUILD.md  CODE-SIGNING.md  README.md  RIO-TERMINAL.md  ac-desktop  build-all-platforms.fish  check-reboot.js  dev.fish  ff1-bridge.js  flip-view.html  install.fish  main.js  offscreen-manager.js  package-lock.json  package.json  preload.js  reinstall.sh  release.fish  restart-electron.ps1  restart-electron.sh  tray-renderer.js  trigger-reboot.js  webview-preload.js
ac-event-daemon/: .gitignore  Cargo.toml  README.md  dev.fish  install-overlay-tools.sh  rebuild-and-start.sh  start-daemon-safe.sh  start-daemon.sh  tauri.conf.json  test-notifications.sh  test-overlays.sh  test-shutdown.sh  test-web-overlay.sh  watch-and-build.sh
ac-event-daemon/src/: ac-event-daemon.rs  tauri-overlay.rs
ac-m4l/: ABLETON-INTEGRATION-PROGRESS.md  AC Metronome.amxd  AC Notepat.amxd  AC Prompt.amxd  AC-KnobMap.amxd.json  AC-Notepat.amxd.json  AC-Notepat.maxpat  AC-NotepatRemote.amxd.json  AC-SpreadnobClean.amxd.json  JS-PIECE-BUNDLE-DEBUG.md  M4L-GUIDELINES.md  PIPELINE.md  README.md  ac-audio-bridge.js  ac-audio-splitter.js  ac-buffer-writer.js  ac-ws-server.js  audio-bridge.js  buffer-reader.js  build-notepat.mjs  build.py  devices.json  publish.mjs  sample-batcher.js  spreadnob-note-normalizer.js  spreadnob-ui.js  🩷 AC Metronome.amxd  🩷 AC Notepat.amxd  🩷 AC Prompt.amxd
ac-shop/: .frontpage-backup.json  .gitignore  INTEGRATION-PLAN.md  README.md  add-hoodies.mjs  create-tools.mjs  livereload.mjs  package-lock.json  package.json  set-help-tiers.mjs  set-sold-count.mjs  shopify.app.toml  shopify.mjs  update-sold-counts.mjs  update-tools.mjs
ac-vst/: CMakeLists.txt  README.md  build-mac.sh  build-remote.fish  rebuild.sh
ac-vst/Source/: PluginEditor.cpp  PluginEditor.h  PluginEditor.mm  PluginProcessor.cpp  PluginProcessor.h
ac-vst/plugins/ACNotepat.vst3/Contents/: Info.plist
ac-vst/source/: acnotepat.cpp  acnotepat.h  acnotepat_cids.h  acnotepat_controller.h  acnotepat_controller.mm  acnotepat_entry.cpp  version.h
aesthetic-computer-router/: README.md  package-lock.json  package.json  publish.js  wrangler.toml
android/: README.md  settings.gradle.kts
ants/: brain.fish  colony.fish  dub-jesper-per.mjs  migrate-news-codes.mjs  mindset-and-rules.md  refresh-score.mjs  score.md  set-treasury-address.mjs  stample-pixel-unification-plan.md  store-opener.mjs  test-brain.sh
apple/: .gitignore  PROGRESS.md  aesthetic-computer--iOS--Info.plist  aesthetic-computer-Info.plist
archive/: node-claude-code-bundling.sh  old.docs.md
arena-native/: Package.swift  README.md  build.sh
artery/: .cdp-cache.json  ARTERY-TUI-REDESIGN.md  CDP-SYSTEM.md  KEEPS-DASHBOARD-PLAN.md  arena-probe.mjs  artery-auto.mjs  artery-dev.mjs  artery-electron.mjs  artery-emacs.mjs  artery-ink.mjs  artery-tui.mjs  artery.mjs  cdp-cli.mjs  cdp-ocr.mjs  cdp.mjs  check-module-timing.mjs  check-udp-state.mjs  daw-debug.mjs  detect-screens.mjs  devcontainer-status.mjs  emacs-mcp.mjs  email-blast.mjs  explore-kidlisp-webview.mjs  inspect-cards.mjs  inspect-prompt-dom.mjs  kidlisp-util.mjs  listen-console.mjs  poppy.mjs  reload-page.mjs  scan-ff1.mjs  show-boot-perf.mjs  task-state.mjs  test-1v1-interactive.mjs  test-1v1-multiplayer.mjs  test-1v1-split.mjs  test-1v1-udp.mjs  test-cards.mjs  test-configs.json  test-hiphop.mjs  test-jump.mjs  (+20 more)
at/: .env.example  .gitignore  ADMIN.md  ATPROTO-ENV-VARS-FIX.md  BACKFILL-ATPROTO-GUIDE.md  BACKFILL-QUICK-REF.md  BACKFILL-SUMMARY.md  DOCUMENTATION-SUMMARY.md  ENV-SETUP.md  FIX-SUMMARY.md  INVESTIGATION-REPORT.md  LEXICON-REF-FIELD-RENAME.md  MANIFEST.md  MONITORING-GUIDE.md  MOODS-ARCHITECTURE-DIAGRAM.md  MOODS-ATPROTO-INTEGRATION-PLAN.md  MOODS-BIDIRECTIONAL-SYNC.md  MOODS-GET-STARTED.md  MOODS-IMPLEMENTATION-COMPLETE.md  MOODS-INDEX.md  MOODS-INTEGRATION-CHECKLIST.md  MOODS-INTEGRATION-SUMMARY.md  MOODS-MIGRATION-COMPLETE.md  MOODS-SIMPLE-PLAN.md  MOODS-STATUS-REPORT.md  NEWS-SCORE.md  PAINTING-ATPROTO-IMPLEMENTATION.md  PAINTING-SHARING.md  QUICK-REFERENCE.md  QUICKSTART.md  README.md  STANDARD-SITE-SYNC.md  TOOLS-README.md  USER-PAGES-API-EXAMPLES.md  USER-PAGES-ARCHITECTURE.md  USER-PAGES-DEPLOYMENT.md  USER-PAGES-INDEX.md  USER-PAGES-MOCKUP.css  USER-PAGES-SUMMARY.md  USER-PAGES-TODO.md  (+32 more)
auth0/: README  README.txt  index.html
bills/: .gitignore  all-services-2026-03-03.md  all-services-2026-03-23.md  digitalocean-2026-03-03.md  (+2 more)
gpu/vello-wasm/: Cargo.toml
gpu/vello-wasm/src/: lib.rs
xbox/runtime/: CMakeLists.txt  README.md
xbox/runtime/include/ac/: image_effects.hpp  input_map.hpp  runtime.hpp
xbox/runtime/tests/: image_effects_contract.cpp  piece_supervisor_contract.cpp  runtime_contract.cpp
(+7403 files in other folders)
