[package]
name = "vello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Aesthetic Computer"]
description = "Vello 2D renderer WASM bindings for Aesthetic Computer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Vello and its dependencies
vello = "0.3"
wgpu = { version = "22", features = ["webgpu", "webgl"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Web APIs
[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuCanvasContext",
    "GpuCanvasConfiguration",
    "GpuTextureFormat",
    "HtmlCanvasElement",
    "console",
]

[profile.release]
opt-level = "s"
lto = true
